--- a/css3d_periodictable.html
+++ b/css3d_periodictable.html
@@ -238,6 +238,8 @@
 
 			var camera, scene, renderer;
 			var controls;
+			var camera_target_pos;
+			var camera_target_look;
 
 			var objects = [];
 			var targets = { table: [], sphere: [], helix: [], grid: [] };
@@ -249,6 +251,9 @@
 
 				camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 10000 );
 				camera.position.z = 3000;
+
+				camera_target_pos = camera.position;
+				camera_target_look = new THREE.Vector3(0,0,0);
 
 				scene = new THREE.Scene();
 
@@ -285,11 +290,16 @@
                         let direction = new THREE.Vector3(0, 0, 1);
                         direction = direction.applyMatrix4(matrix);
 
-                        let pos = obj.position.clone().add(direction.multiplyScalar(1000));                        
-                        camera.position.set(pos.x, pos.y, pos.z);
-                        camera.lookAt(obj.position);
-                        render();
-                        console.info(pos);
+			camera_target_pos = obj.position.clone().add(direction.multiplyScalar(1000));                        
+                        //camera.position.set(pos.x, pos.y, pos.z);
+                        //camera.lookAt(obj.position);
+			camera_target_look = obj.position.clone();
+                        //render();
+                        //console.info(camera_target_look);
+                        //console.info(camera_target_pos);
+
+			transformCamera();
+
                     };
 
 					var object = new THREE.CSS3DObject( element );
@@ -427,6 +437,17 @@
 
 			}
 
+			function transformCamera() {
+				new TWEEN.Tween( camera.position )
+						.to( { x: camera_target_pos.x, y: camera_target_pos.y, z: camera_target_pos.z }, 1000 )
+						.easing( TWEEN.Easing.Exponential.InOut )
+						.start();
+
+				new TWEEN.Tween( controls.target )
+						.to( { x: camera_target_look.x, y: camera_target_look.y, z: camera_target_look.z }, 1000 )
+						.start();
+			}
+
 			function transform( targets, duration ) {
 
 				TWEEN.removeAll();
@@ -446,7 +467,7 @@
 						.easing( TWEEN.Easing.Exponential.InOut )
 						.start();
 
-				}
+				}				
 
 				new TWEEN.Tween( this )
 					.to( {}, duration * 2 )
